--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "repository": "https://github.com/DatchLive/Portfolio.git",
   "author": "DatchLive <datchlivetv730@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "webpack",
+    "start": "webpack serve",
+    "watch": "webpack --watch"
+  },
   "dependencies": {
     "micromodal": "^0.4.6",
     "swiper": "^6.4.8"
   },
   "devDependencies": {
-    "webpack": "^5.17.0",
-    "webpack-cli": "^4.4.0"
+    "webpack": "^5.19.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
