--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "watch": "webpack --watch"
   },
   "dependencies": {
+    "css-loader": "^5.0.1",
     "micromodal": "^0.4.6",
+    "style-loader": "^2.0.0",
     "swiper": "^6.4.8"
   },
   "devDependencies": {
-    "webpack": "^5.19.0",
-    "webpack-cli": "^4.4.0",
+    "webpack": "^5.21.0",
+    "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
